--- a/EchoesOfDiscordiaGamified/EchoesOfDiscordia.css
+++ b/EchoesOfDiscordiaGamified/EchoesOfDiscordia.css
@@ -8,7 +8,8 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   font-size: 2.3vmin;
-  color: rgb(240, 225, 18);
+  color: rgb(255, 255, 255);
+  position: relative;
 }
 
 scene {
@@ -24,6 +25,7 @@ canvas {
 }
 
 dialog[type=splash] {
+  background-image: url(Images/Splash.png);
   margin: 0px;
   padding: 0px;
   width: 100vw;
@@ -35,7 +37,8 @@ dialog[type=splash] {
   text-align: center;
 }
 dialog[type=splash]>img#FudgeStoryLogo {
-  width: 100%;
+  height: 2em;
+  vertical-align: middle;
 }
 
 dialog[type=text] {
@@ -45,3 +48,57 @@ dialog[type=text] {
 dialog[type=text].blue {
   background-color: blue;
 }
+
+/* Speech Bubble */
+speech {
+  position: absolute;
+  bottom: 2%;
+  left: 0px;
+  color: white;
+  width: 80%;
+  height: 8em;
+  margin-left: 50%;
+  transform: translate(-50%);
+  background: #190000cf;
+  border: 2px solid #460000;
+  border-image-slice: 1;
+  border-width: 2px;
+  border-image-source: linear-gradient(111deg, rgba(240, 144, 53, 1) 0%, rgba(70, 0, 0, 1) 100%);
+  color: white;
+  box-shadow: 0 0 10px 1px #00000060;
+}
+
+#speech-background {
+  position: absolute;
+  bottom: 2%;
+  left: 0px;
+  background-image: url(Images\Assets\Questboard.png);
+}
+
+speech name {
+  position: absolute;
+  top: -77px;
+  left: -2px;
+  font-weight: 400;
+  font-size: 40px;
+  padding: 10px 30px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-width: 33.775px;
+  min-height: 40.8px;
+  background: #190000cf;
+  border: 2px solid #460000;
+  border-image-slice: 1;
+  border-width: 2px;
+  border-image-source: linear-gradient(111deg, rgba(240, 144, 53, 1) 0%, rgba(70, 0, 0, 1) 100%);
+  color: white;
+  box-shadow: 0 0 10px 1px #00000060;
+  border-bottom: none;
+}
+
+content {
+  margin: 25px 30px;
+  display: block;
+  font-size: 30px;
+  /*text-align: center; */
+}
+
